Bug 687732.  We are now using padding-top instead of margin-top for the IE settings so the prefs pull-tab can be aligned to the bottom of the header.

--- a/src/main/css/spiffyui.ie.css
+++ b/src/main/css/spiffyui.ie.css
@@ -4,7 +4,7 @@
 
 #mainContent {
     width: auto;
-    margin-top: 20px;
+    padding-top: 20px;
 }
 
 .spiffy-fancy-button {
@@ -154,7 +154,7 @@ button..rpt-fancy-button {
 }
 
 .pulldownprefspanel {
-    top: 0px;
+    top: -23px;
 }
 
 .prefspulltab {
